2003-01-07  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Fixed a typo in the calculation of the
	  values in the "*ImageableArea" lines of the PPD files.

2003-01-05  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-perl-data.c: Support for margin settings in a printer
	  entry of a driver XML file (combo-specific margins).

	* foomatic-combo-xml.c: Bigger buffer for printer entry of
	  driver XML files (needed for margin info, especially of
	  GIMP-Print driver).

	* lib/Foomatic/DB.pm: Unprintable margins as defined in the XML
	  files are used for the "*ImageableArea" and "*HWMargins" lines in 
	  the PPD files now.
	
2003-01-04  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-perl-data.c: Parse data about unprintable margins in
	  printer, driver, and combo XML files.

2002-12-31  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Allow boolean options to be used as member
	  options for composite options. To add the "From<Composite>"
	  choice, booleanm member options will be implemented as
	  enumerated choice options in the PPD file. In the
	  "<ev_driverval>" entries in the XML file the boolean options
	  have to be expressed as "Option=true", "Option=false", "Option"
	  (means "true"), or "noOption" (means "false").
	
2002-12-19  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 2.9.1. 
	  Tag name: "foomatic-db-engine-2_9_1".

	* README, USAGE, Foomatic-Devel-Ideas.txt: Updated for version
	  2.9.1.
	
2002-12-17  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Allow settings for options which do not
	  exist for the current printer/driver combo in the choices of
	  composite options. These will be deleted from the composite
	  option in the final PPD file. With this it gets much easier
	  to set up the composite option, for example the one for the
	  "pxlmono" driver where some printers have the PJL option